# 0,1,0,20210221
	"Overridelibrary" Driver Issue fixer applying for the whole scene automatically (Tools/Animation/Fix Override Driver Issue)

# 0,1,0,20210219
	Solve the Library override broken shapekey drivers (Tools/Animation/Fix Override Driver Issue).

# 0,1,0,20210216
	Select by Length and Segment Count added to Select Menu in Curve Edit mode.
	'W','E','R' issue with snap fixed.

# 0,1,0,20210207
	Multi target shapekey (driving multiple shapekeys automatically) added under shapekey panel.
	Very simple tool for quick rename objects data name same as object name (for now search 'Data Rename' operator).

# 0,1,0,20210131
	'Align object' issue with new merged object fixed.
	Quadmenu 'Weld' option is works now (as a temprary solution).

# 0,1,0,20210128
	The issue of last update ('W,E,R' and snap) fixed.

# 0,1,0,20210127
	Camera Target seprated from FOV Target.
	Camera Target tools puted on 'Properties > Object Data (Camera) > Target/Tools' panel.
	'Blender Transform Type' added to Options make 'W,E,R' Keys work like Blender 'G,R'S' Keys (Need to restart blender on change)

# 0,1,0,20210124
	'TWEAK MMB + Shift' Align view (Replacement of 'TWEAK MMB + Alt' in Blender Default for 3DsMax Mode).
	Zoom mode setting to Horizontal mode when Maya navigation active.
	Joystick connector remove old driver if exist.
	Camera target control the F-Stop of Depth of Field too.

# 0,1,0,20210122
	'Hair guides from/to curve' added to View3D:Tools/Particle Menu.
	Mesh Edit mode Skin Resize keymap changed to 'Ctrl + Shift + A' (Max mode).
	Joystic to Shape key connector added to link context menu (Ctrl + L).
	'Weight to Vertex Color' puted in View3d/ Paint menu (Vertex paint Mode).
	'A' copy active object material to selected objects as 3DsMax "Assign Material to Selection" (Max mode).
	'Create' and 'Tools' Menus shows only in object mode.
	'Shift + T' open External Data context menu replacement for 3DsMax Asset Tracking (Max mode).

# 0,1,0,20210110