@@ -5,8 +5,6 @@ Note: Tasks in [] can't apply for now because of python API limitation, I am loo
 	Brush Size control hot keys (for max mode)
 	Sequencer in pr mode Alt + Arrows move step by step
 	[F9 if no active camera in scene create one befor render and delete after render]
-	Shader editor A assyn to selected
-	Disable F9 (max quick render) for other actions if exist
 	in some PCs 'E' calls Scale rather then Rotate ??
 
 # Tools
