@@ -1,3 +1,6 @@
+# 0,1,0,20210310
+	Render preset Save/Load and Copy/Paste operator added (Render Properties/ Presets)
+
 # 0,1,0,20210221
 	"Overridelibrary" Driver Issue fixer applying for the whole scene automatically (Tools/Animation/Fix Override Driver Issue)
 
